[gd_scene load_steps=8 format=3 uid="uid://bu6lmmktak1mh"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_fmau5"]
[ext_resource type="Texture2D" uid="uid://dw64gjuvtfy7l" path="res://Rocky Roads/Objects/coin_silver.png" id="2_s0h0u"]
[ext_resource type="Texture2D" uid="uid://c15qgod23eu1s" path="res://Rocky Roads/UI/hearts.png" id="3_jq1vb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6v0t"]
bg_color = Color(1, 0.941176, 0.709804, 0.776471)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_hiweq"]
font_size = 48
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-3.575, 2.095)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4pyw"]
bg_color = Color(0.607843, 0.301961, 0.168627, 0.792157)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45otk"]
bg_color = Color(0.258824, 0.00392157, 0.00392157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fmau5")

[node name="Panel_Eggs" type="Panel" parent="."]
offset_left = 20.0
offset_top = 18.0
offset_right = 220.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g6v0t")

[node name="Egg" type="Sprite2D" parent="."]
position = Vector2(53, 49)
scale = Vector2(4, 4)
texture = ExtResource("2_s0h0u")
hframes = 8
frame = 2

[node name="Num_Eggs" type="Label" parent="."]
offset_left = 83.0
offset_top = 14.0
offset_right = 162.0
offset_bottom = 82.0
text = ": 00"
label_settings = SubResource("LabelSettings_hiweq")

[node name="Panel_Harts" type="Panel" parent="."]
offset_left = 970.0
offset_top = 21.0
offset_right = 1130.0
offset_bottom = 79.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v4pyw")

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(1000, 44)
scale = Vector2(3.9375, 4.125)
texture = ExtResource("3_jq1vb")
hframes = 4
frame = 1

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(1050, 44)
scale = Vector2(3.9375, 4.125)
texture = ExtResource("3_jq1vb")
hframes = 4
frame = 1

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(1100, 44)
scale = Vector2(3.9375, 4.125)
texture = ExtResource("3_jq1vb")
hframes = 4
frame = 1

[node name="Button" type="Button" parent="."]
offset_left = 1064.0
offset_top = 85.0
offset_right = 1124.0
offset_bottom = 116.0
theme_override_styles/normal = SubResource("StyleBoxFlat_45otk")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
